metal-info-set/golden/P07F40/metal40_macosx26/first_errors.txt
probe.metal:8:61: error: too few template arguments for class template 'visible_function_table'
extern "C" bool probe_p07f_is_null_visible_function_table_0(visible_function_table<> vft) {
                                                            ^
/private/var/run/com.apple.security.cryptexd/mnt/com.apple.MobileAsset.MetalToolchain-v17.6.42.0.tn2OSQ/Metal.xctoolchain/usr/metal/32023/lib/clang/32023.883/include/metal/metal_visible_function_table:14:8: note: template is declared here
struct visible_function_table;
       ^
probe.metal:15:61: error: too few template arguments for class template 'visible_function_table'
extern "C" bool probe_p07f_is_null_visible_function_table_1(visible_function_table<> vft) {
                                                            ^
/private/var/run/com.apple.security.cryptexd/mnt/com.apple.MobileAsset.MetalToolchain-v17.6.42.0.tn2OSQ/Metal.xctoolchain/usr/metal/32023/lib/clang/32023.883/include/metal/metal_visible_function_table:14:8: note: template is declared here
struct visible_function_table;
       ^
probe.metal:34:61: error: too few template arguments for class template 'visible_function_table'
extern "C" bool probe_p07f_is_null_visible_function_table_4(visible_function_table<> vft) {
                                                            ^
/private/var/run/com.apple.security.cryptexd/mnt/com.apple.MobileAsset.MetalToolchain-v17.6.42.0.tn2OSQ/Metal.xctoolchain/usr/metal/32023/lib/clang/32023.883/include/metal/metal_visible_function_table:14:8: note: template is declared here
struct visible_function_table;
       ^
probe.metal:95:67: error: no template named 'intersection_function_table'; did you mean 'metal::raytracing::intersection_function_table'?
extern "C" bool probe_p07f_is_null_intersection_function_table_13(intersection_function_table<> vft) {
                                                                  ^~~~~~~~~~~~~~~~~~~~~~~~~~~
                                                                  metal::raytracing::intersection_function_table
/private/var/run/com.apple.security.cryptexd/mnt/com.apple.MobileAsset.MetalToolchain-v17.6.42.0.tn2OSQ/Metal.xctoolchain/usr/metal/32023/lib/clang/32023.883/include/metal/metal_raytracing:1459:8: note: 'metal::raytracing::intersection_function_table' declared here
struct intersection_function_table
       ^
probe.metal:96:10: error: no member named 'is_null_intersection_function_table' in namespace 'metal'; did you mean 'metal::raytracing::is_null_intersection_function_table'?
  return metal::is_null_intersection_function_table(vft);
         ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
         metal::raytracing::is_null_intersection_function_table
/private/var/run/com.apple.security.cryptexd/mnt/com.apple.MobileAsset.MetalToolchain-v17.6.42.0.tn2OSQ/Metal.xctoolchain/usr/metal/32023/lib/clang/32023.883/include/metal/metal_raytracing:1877:17: note: 'metal::raytracing::is_null_intersection_function_table' declared here
METAL_FUNC bool is_null_intersection_function_table(intersection_function_table<Tags...> t)
                ^
probe.metal:172:22: warning: 'probe_p07f_quad_active_threads_mask_24' has C-linkage specified, but returns user-defined type 'metal::quad_vote' which is incompatible with C [-Wreturn-type-c-linkage]
extern "C" quad_vote probe_p07f_quad_active_threads_mask_24() {
                     ^
probe.metal:187:10: error: no matching function for call to 'quad_and'
  return metal::quad_and(1.0f);
         ^~~~~~~~~~~~~~~
/private/var/run/com.apple.security.cryptexd/mnt/com.apple.MobileAsset.MetalToolchain-v17.6.42.0.tn2OSQ/Metal.xctoolchain/usr/metal/32023/lib/clang/32023.883/include/metal/metal_quadgroup:94:14: note: candidate template ignored: requirement '__is_valid_quadgroup_integral_type<float, void>::value' was not satisfied [with T = float]
METAL_FUNC T quad_and(T data)
             ^
probe.metal:200:22: warning: 'probe_p07f_quad_ballot_28' has C-linkage specified, but returns user-defined type 'metal::quad_vote' which is incompatible with C [-Wreturn-type-c-linkage]
extern "C" quad_vote probe_p07f_quad_ballot_28() {
                     ^
probe.metal:243:10: error: no matching function for call to 'quad_or'
  return metal::quad_or(1.0f);
         ^~~~~~~~~~~~~~
/private/var/run/com.apple.security.cryptexd/mnt/com.apple.MobileAsset.MetalToolchain-v17.6.42.0.tn2OSQ/Metal.xctoolchain/usr/metal/32023/lib/clang/32023.883/include/metal/metal_quadgroup:156:14: note: candidate template ignored: requirement '__is_valid_quadgroup_integral_type<float, void>::value' was not satisfied [with T = float]
METAL_FUNC T quad_or(T data)
             ^
probe.metal:320:10: error: no matching function for call to 'quad_xor'
  return metal::quad_xor(1.0f);
         ^~~~~~~~~~~~~~~
/private/var/run/com.apple.security.cryptexd/mnt/com.apple.MobileAsset.MetalToolchain-v17.6.42.0.tn2OSQ/Metal.xctoolchain/usr/metal/32023/lib/clang/32023.883/include/metal/metal_quadgroup:266:14: note: candidate template ignored: requirement '__is_valid_quadgroup_integral_type<float, void>::value' was not satisfied [with T = float]
METAL_FUNC T quad_xor(T data)
             ^
probe.metal:331:22: warning: 'probe_p07f_simd_active_threads_mask_47' has C-linkage specified, but returns user-defined type 'metal::simd_vote' which is incompatible with C [-Wreturn-type-c-linkage]
extern "C" simd_vote probe_p07f_simd_active_threads_mask_47() {
                     ^
probe.metal:346:10: error: no matching function for call to 'simd_and'
  return metal::simd_and(1.0f);
         ^~~~~~~~~~~~~~~
/private/var/run/com.apple.security.cryptexd/mnt/com.apple.MobileAsset.MetalToolchain-v17.6.42.0.tn2OSQ/Metal.xctoolchain/usr/metal/32023/lib/clang/32023.883/include/metal/metal_simdgroup:122:14: note: candidate template ignored: requirement '__is_valid_simdgroup_integral_type<float, void>::value' was not satisfied [with T = float]
METAL_FUNC T simd_and(T data)
             ^
probe.metal:359:22: warning: 'probe_p07f_simd_ballot_51' has C-linkage specified, but returns user-defined type 'metal::simd_vote' which is incompatible with C [-Wreturn-type-c-linkage]
extern "C" simd_vote probe_p07f_simd_ballot_51() {
                     ^
probe.metal:402:10: error: no matching function for call to 'simd_or'
  return metal::simd_or(1.0f);
         ^~~~~~~~~~~~~~
/private/var/run/com.apple.security.cryptexd/mnt/com.apple.MobileAsset.MetalToolchain-v17.6.42.0.tn2OSQ/Metal.xctoolchain/usr/metal/32023/lib/clang/32023.883/include/metal/metal_simdgroup:170:14: note: candidate template ignored: requirement '__is_valid_simdgroup_integral_type<float, void>::value' was not satisfied [with T = float]
METAL_FUNC T simd_or(T data)
             ^
probe.metal:479:10: error: no matching function for call to 'simd_xor'
  return metal::simd_xor(1.0f);
         ^~~~~~~~~~~~~~~
/private/var/run/com.apple.security.cryptexd/mnt/com.apple.MobileAsset.MetalToolchain-v17.6.42.0.tn2OSQ/Metal.xctoolchain/usr/metal/32023/lib/clang/32023.883/include/metal/metal_simdgroup:280:14: note: candidate template ignored: requirement '__is_valid_simdgroup_integral_type<float, void>::value' was not satisfied [with T = float]
METAL_FUNC T simd_xor(T data)
             ^
probe.metal:492:62: error: too few template arguments for class template 'visible_function_table'
extern "C" bool probe_p07f_is_null_visible_function_table_70(visible_function_table<> vft) {
                                                             ^
/private/var/run/com.apple.security.cryptexd/mnt/com.apple.MobileAsset.MetalToolchain-v17.6.42.0.tn2OSQ/Metal.xctoolchain/usr/metal/32023/lib/clang/32023.883/include/metal/metal_visible_function_table:14:8: note: template is declared here
struct visible_function_table;
       ^
4 warnings and 12 errors generated.
